--- a/ex27.html
+++ b/ex27.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Contador de Letras</title>
-    <script src="js/contaletras.js" defer></script>
+    <script src="js/maiuscula.js" defer></script>
 </head>
 <body>
     <input type="text" id="frase" placeholder="Digite uma frase">
-    <button onclick="contarLetras()">Contar</button>
+    <button onclick="maiuscula()">Deixar tudo maiusculo</button>
     <p id="resultado"></p>
 </body>
 </html>
