--- a/ex26.html
+++ b/ex26.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcular Média</title>
-    <script src="js/mediaarray.js" defer></script>
+    <title>Mostrando números pares</title>
+    <script src="js/pares.js" defer></script>
 </head>
 <body>
     <h2>Digite os números separados por vírgula:</h2>
     <input type="text" id="numeros" placeholder="Exemplo: 1,2,3,4">
-    <button onclick="calcular()">Calcular Média</button>
+    <button onclick="par()">Mostrar os pares</button>
     <p id="resultado"></p>
 </body>
 </html>
